# fklab

./: ProjectHome.md
acm/: poj3666.cc  poj3723  poj3735
acm/cc/: poj3735.test  spoj5.cc  test.poj3719
acm/java/: Main1171.java  Main3579.java  POJ3579.java  SPOJ24.java
acm/python/: poj3734.py  spoj27.py  spoj42.py
archive/: vim_plugin.tgz
cc/local_system/: WordCount.ini  mapred_mapper  mapred_worker  showlog.sh  startup.sh  status.sh  tfs_chunkserver  tfs_master  tfs_master.ini  wc.txt
cc/mapred/distrib/: mapred_worker.ini
cc/tfs/: Doxyfile.API
conf/: bashrc  fstab  init_env.py  sources.list.etch.cn99  sources.list.hardy.cn99
conf/emacs/: tabbar.el
conf/vim/: c-file-header  py-file-header
cpp/: CMakeLists.txt
cpp/bdb/: store.cpp  store_rep.cpp
cpp/bdb/a/data/bdb/: __db.003  __db.004  __db.006  __db.rep.db
cpp/bdb/b/data/bdb/: __db.002  __db.003
cpp/bdb/c/data/bdb/: __db.001  __db.003  __db.006
cpp/cmake/: clear.sh
cpp/cmake/src/: Transfer.ice  list.cc
cpp/cmake/test/: CMakeLists.txt
cpp/test/: CMakeLists.txt  test_basic.cpp  test_boost.cpp  test_boost2.cpp  test_class.cpp  test_fklib.cpp  test_log4cplus.cc  test_macro.cpp  test_mpi.cpp  test_process.cpp  test_process_aux.cpp  test_template.cpp
cpp/test/ice/: Transfer.cpp  Transfer.h
debby/ice/slice/: Exceptions.ice  Session.ice
debby/src/client/: SessionService.cpp
debby/src/server/: DebbyManager.cpp  ServerLogger.hpp
debby/test/: CTestTestfile.cmake  Makefile
debby/test/blackbox/: TestBasic.hpp  TestStress.cpp
debby/test/server/: TestDataManager.hpp
devkfc/: app.yaml  hello.py  run
gae/: app.yaml  index.html  notes.html  store.html  store.py  test.html
ha/: mock_scheduler.py
hadoop/: build.xml
java/: .classpath  myManifest
java/ant/: build.xml
java/ant/src/: Hello.java
java/ant/sub/: build.xml  build2.xml
java/src/: Test.java
java/src/fk/: Number.java  Prime.java  RSA.java  out.java
java/src/libtest/: Log4jTest.java
java/src/test/: ArrayTest.java  CollectionTest.java  DateTest.java  FormatterTest.java  Hello.java  LogTest.java  NetworkTest.java
local_system/: mapred_reducer  mapred_worker3.ini  tfs_monitor  tfs_startup.sh
local_system/c1/: tfs_chunkserver.ini
local_system/c3/: tfs_chunkserver.ini
mapred/src/master/: TaskInfo.hpp
mapreduce/: .classpath
mapreduce/src/test/: PartitionerTest.java
pig/: iter2.pig
proj/debby/test/: CMakeLists.txt
proj/fkdict/: dict.history  dict.py
proj/fpm/: .project  tmptree4.txt  tmptree5.txt  tmptree6.txt
proj/gae/: app.yaml  index.html  memo.html  memo.py  memo2.html  notes.py
proj/gae/word/: base.html  check.html  word.py
proj/psort/: Sort.cpp  SortGen  check.cpp  ps2.cpp  ps3.cpp  ps4.cpp  test.cpp
proj/smth/: smth.py  www2-main.js
proj/stock/: a.py
proj/weps/: score.0  score.1  score.sh  score.txt  weps.xlsx
proj/weps/report/: weps-slides.tex  weps.tex
proj/weps/scorer_1.1/: log.txt
proj/word/: known
python/: .project  fdb.py  lab.py  svd.py  test.py  test_max_flow.py  test_networkx.py  tmp
python/algo/: box.py  clique.py  kmeans.py  self.py  shingling.py
python/data/: data.txt  error.xml
python/ice/: fks.py
python/test/: test_cgi.py  test_data_types.py  test_datetime.py  test_file.py  test_ftp.py  test_matplot.py  test_misc.py  test_numpy.py  test_process.py  test_scipy.py  test_tk.py  test_xml.py
python/tp/: logutil.py
python/utils/: classify.py  nn.py  queens.py  rsa.py  thread_pool.py
python/wsd/: pos.xml  test_bag.py  test_pos.xml
script/: cclean  del  gget  init_env.py  ipgw  sslipgw  test.sh
tex/: test.tex
tex/impression-rank/: impression-rank-slides.tex
tfs/src/app/: CMakeLists.txt
tfs/src/chunkserver/: Main.cpp
tfs/src/client/: ChunkServers.hpp  File.hpp  FileSystem.hpp
tfs/src/common/: ChunkServerHeader.hpp
trunk/acm/: poj3719  poj3719.cc  poj3723.cc  poj3734.cc  poj3735.cc  spoj4194.py  spoj48.py  trie.cpp
trunk/acm/cc/: acm.cc  spoj11.cc  spoj27.cpp  spoj4194.cc  test.poj3723
trunk/acm/java/: Main3278.java  Main3425.java  Main3536.java
trunk/acm/python/: spoj11.py  spoj2.py
trunk/cc/local_system/: mapred_master  mapred_monitor  mapred_worker1.ini  setup.py  tfs_client.ini  tfs_shutdown.sh
trunk/cc/mapred/: CMakeLists.txt  Doxyfile.API
trunk/cc/tfs/: CMakeLists.install  CMakeLists.txt
trunk/conf/: _emacs  bashrc  bashrc.root  init_env.py  keymap.conf  monitor.ini  msmtprc  vimrc
trunk/conf/vim/: h-file-header  sh-file-header
trunk/cpp/: tunix  tunix.cc
trunk/cpp/bdb/: CMakeLists.txt  test_bdb.cpp  test_fkbdb.cpp
trunk/cpp/bdb/a/data/bdb/: __db.001  __db.002  __db.005
trunk/cpp/bdb/b/: store_rep.conf
trunk/cpp/bdb/b/data/bdb/: __db.001  __db.004  __db.005  __db.006
trunk/cpp/bdb/c/: store_rep.conf
trunk/cpp/bdb/c/data/bdb/: __db.002  __db.004  __db.005  __db.rep.db
trunk/cpp/cmake/: CMakeLists.txt
trunk/cpp/fklib/: fkbdb.h  fklib.h
trunk/cpp/test/: CMakeLists.txt  test.cpp  test_basic.cpp  test_fklib  test_ice.cpp  test_icethread.cpp  test_io.cpp  test_net.cpp  test_socket.cpp  test_stl.cpp  test_string.cpp
trunk/devkfc/: index.yaml
trunk/gae/: base.html
trunk/ha/: mock_scheduler.py
trunk/hadoop/: build.xml
trunk/hadoop/src/: mapred
trunk/java/: build.xml  vimant
trunk/local_system/: env.py  logparser.py  mapred_job  mapred_serial  mapred_worker2.ini  tfs_shell
trunk/mapred/: CMakeLists.install
trunk/pig/: init.pig  init2.pig  iter.pig
trunk/proj/debby/: CMakeLists.txt
trunk/proj/debby/ice/c++/ice-3.1.1/: Exceptions.h  Session.cpp  Session.h
trunk/proj/debby/src/client/: Client.h  ClientDeamon.hpp  ClientImpl.cpp  ClientImpl.hpp  debby.h
trunk/proj/debby/src/server/: DebbyManager.hpp  KeepAliveDeamon.cpp  SessionImpl.cpp
trunk/proj/debby/test/: cmake_install.cmake
trunk/proj/debby/test/server/: TestDebbyManager.hpp
trunk/python/: .pydevproject  html.py  kmeans.py  test_max_match.py  txml.py
trunk/script/: cclean  del  gput  monitor.py  repeat.py  setkeymap.sh
trunk/stock/: show.py
trunk/tex/: algo_exec2.tex  beamer_template.tex  clear.sh  sample2e.tex  test_beamer.tex
(+356 files in other folders)
