ADD_EXECUTABLE(test_basic   test_basic.cpp)
ADD_EXECUTABLE(test_net test_net.cpp)
ADD_EXECUTABLE(test_boost   test_boost.cpp)
TARGET_LINK_LIBRARIES(test_boost boost_serialization boost_regex boost_filesystem)
ADD_EXECUTABLE(test_boost2  test_boost2.cpp)
ADD_EXECUTABLE(test_socket  test_socket.cpp) 
ADD_EXECUTABLE(test_ice  test_ice.cpp) 
TARGET_LINK_LIBRARIES(test_ice fk_ice Ice)
ADD_EXECUTABLE(test_icethread  test_icethread.cpp) 
TARGET_LINK_LIBRARIES(test_icethread Ice)
#ADD_EXECUTABLE(tthread  tthread.cpp) 
#TARGET_LINK_LIBRARIES(tthread pthread)
ADD_EXECUTABLE(test_process  test_process.cpp) 
ADD_EXECUTABLE(test_process_aux  test_process_aux.cpp) 
ADD_EXECUTABLE(test_log4cplus test_log4cplus.cc)
TARGET_LINK_LIBRARIES(test_log4cplus log4cplus pthread)
ADD_EXECUTABLE(test_cpp test.cpp)
ADD_EXECUTABLE(test_fklib test_fklib.cpp)
ADD_EXECUTABLE(test_mpi test_mpi.cpp)
TARGET_LINK_LIBRARIES(test_mpi mpi)

