PROJECT(debby)
	
# Enviroment detection
#EXEC_PROGRAM(gcc ARGS "-dumpversion" OUTPUT_VARIABLE GCC_VERSION)
EXEC_PROGRAM(gcc ARGS "-dumpversion | grep -o \"^[0-9]\\.[0-9]\" - " OUTPUT_VARIABLE GCC_VERSION)
MESSAGE(STATUS "gcc version : ${GCC_VERSION}")
EXEC_PROGRAM(slice2cpp ARGS "-v" OUTPUT_VARIABLE ICE_VERSION)
MESSAGE(STATUS "ice version : ${ICE_VERSION}")



SET (CMAKE_LD_FLAGS         "${CMAKE_LD_FLAGS} -fprofile-arcs -ftest-coverage")
SET(CMAKE_CXX_FLAGS_DEBUG   "-g -Wall -Wextra -Wno-sign-compare -Wno-unused-parameter")
SET(CMAKE_CXX_FLAGS_RELEASE "-g -O2")
SET (CMAKE_CXX_FLAGS_DEBUGSTATIC    "${CMAKE_C_FLAGS_DEBUG} -static")
SET (CMAKE_CXX_FLAGS_RELEASESTATIC  "${CMAKE_CXX_FLAGS_RELEASE} -static -Wall -O2")
SET (CMAKE_BUILD_TYPE Debug)
SET (UPDATE_TYPE svn)

SET (PROJECT_ROOT ${PROJECT_SOURCE_DIR})
SET (FKLAB_ROOT ${PROJECT_SOURCE_DIR}/../../)
SET (THIRD_PARTY_ROOT ${FKLAB_ROOT}/cc/thirdparty)
SET (TEST_ROOT ${PROJECT_SOURCE_DIR}/test)
SET (SRC_ROOT ${PROJECT_SOURCE_DIR}/src)
SET (SERVER_ROOT ${SRC_ROOT}/server)
SET (CLIENT_ROOT ${SRC_ROOT}/client)
SET (APP_ROOT ${SRC_ROOT}/app)
SET (ICE_ROOT ${PROJECT_ROOT}/ice)

MESSAGE(STATUS "FKLAB_ROOT:${FKLAB_ROOT}")
MESSAGE(STATUS "PROJECT_ROOT:${PROJECT_ROOT}")
MESSAGE(STATUS "THIRD_PARTY_ROOT:${THIRD_PARTY_ROOT}")
MESSAGE(STATUS "TEST_ROOT:${TEST_ROOT}")
MESSAGE(STATUS "SRC_ROOT:${SRC_ROOT}")
MESSAGE(STATUS "CLIENT_ROOT:${CLIENT_ROOT}")
MESSAGE(STATUS "SERVER_ROOT:${SERVER_ROOT}")

INCLUDE_DIRECTORIES (${SRC_ROOT})
INCLUDE_DIRECTORIES (${ICE_ROOT}/c++/ice-${ICE_VERSION})
INCLUDE_DIRECTORIES (${THIRD_PARTY_ROOT}/include)

LINK_DIRECTORIES(${THIRD_PARTY_ROOT}/lib/gcc-${GCC_VERSION})

AUX_SOURCE_DIRECTORY(src/server SRC_SERVER)
AUX_SOURCE_DIRECTORY(ice/c++/ice-${ICE_VERSION} SRC_ICE)
AUX_SOURCE_DIRECTORY(src/client SRC_CLIENT)

#MESSAGE(STATUS "ICE_SRC:${SRC_ICE}")

ADD_LIBRARY(debby_ice STATIC ${SRC_ICE})
TARGET_LINK_LIBRARIES(debby_ice Ice)

ADD_LIBRARY(debby_client STATIC ${SRC_CLIENT})
TARGET_LINK_LIBRARIES(debby_client debby_ice log4cplus rudeconfig Ice)
ADD_DEPENDENCIES(debby_client debby_ice)

ADD_EXECUTABLE(debby_server ${SRC_SERVER})
TARGET_LINK_LIBRARIES(debby_server db_cxx debby_ice log4cplus rudeconfig Ice)
ADD_DEPENDENCIES(debby_server debby_ice)

ADD_EXECUTABLE(debby_shell ${APP_ROOT}/Shell.cpp)
TARGET_LINK_LIBRARIES(debby_shell debby_client readline termcap)

ADD_SUBDIRECTORY(test)

#INSTALL_TARGETS(${PROJECT_ROOT}/lib debby_client debby_ice)
INSTALL(FILES libdebby_client.a libdebby_ice.a DESTINATION ${PROJECT_ROOT}/lib)
INSTALL(FILES libdebby_client.a libdebby_ice.a DESTINATION ${THIRD_PARTY_ROOT}/lib/gcc-${GCC_VERSION})

#INSTALL(TARGETS debby_client debby_ice
#  RUNTIME DESTINATION ${PROJECT_ROOT}/bin
#  LIBRARY DESTINATION ${PROJECT_ROOT}/lib
#  ARCHIVE DESTINATION ${THIRD_PARTY_ROOT}/lib/gcc-${GCC_VERSION})

